<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TuneActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonHighE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/highE"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/B"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/G"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/D"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/A"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonBassE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/bassE"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/backButton"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:width="300sp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/carme_regular"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/carme_regular"
        android:textSize="18sp"
        android:layout_marginTop="100dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>