<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="170sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstFragment" />

        <Button
            android:id="@+id/buttonTune"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/tuner"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSearch" />

        <TextView
            android:id="@+id/tvFirstFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:fontFamily="@font/carme_regular"
            android:text="@string/app_name"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/infoButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/button"
            android:fontFamily="@font/carme_regular"
            android:text="@string/infoStart"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonTune"
            app:layout_constraintVertical_bias="0.776" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>