<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="300dp">

    <TextView
        android:id="@+id/infoChord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/chordName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/carme_regular"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/infoStrings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoStrings"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/strings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/carme_regular"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/infoFingering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoFingering"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/fingering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/carme_regular"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/chordName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fingering"
        android:fontFamily="@font/carme_regular"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/fingering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strings"
        android:fontFamily="@font/carme_regular"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/strings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/carme_regular"
        android:textColor="@color/black"/>


</androidx.constraintlayout.widget.ConstraintLayout>